--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,19 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: mono_finance
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
 
     - name: Set up  Go 1.x
@@ -20,6 +33,9 @@ jobs:
     
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+    
+    - name: Run database migration
+      run: make migrateup
 
     - name: Test
       run: make test
