--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://mono_finance:Akinyemi@localhost:5432/mono_finance?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=2a 3c1bc45ca163c37b0d67b59306dfe0
+ACCESS_TOKEN_DURATION=15m
