ci: Add k8s image pull policy — Always

--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: mono-finance-api
         image: 926731416094.dkr.ecr.us-east-1.amazonaws.com/monofinance:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
