ci: Fix image tag and update kube config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,11 @@ jobs:
         REPOSITORY: monofinance
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t latest .
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
         docker push -a $REGISTRY/$REPOSITORY
+
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name mono-finance --region eu-west-1
 
     - name: Deploy image to Amazon EKS
       run: |
