feat: implement refresh token to generate access token

--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_SOURCE=postgresql://mono_finance:Akinyemi@localhost:5432/mono_finance?sslmode
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=2a3c1bc45ca163c37b0d67b59306dfe0
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
