--- a/app.env
+++ b/app.env
@@ -1,5 +1,6 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://mono_finance:Akinyemi@localhost:5432/mono_finance?sslmode=disable
+MIGRATION_URL=file://db/migrations
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=2a3c1bc45ca163c37b0d67b59306dfe0
