--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENVIRONMENT=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://mono_finance:Akinyemi@localhost:5432/mono_finance?sslmode=disable
 MIGRATION_URL=file://db/migrations
