--- a/app.env
+++ b/app.env
@@ -7,3 +7,7 @@ GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=2a3c1bc45ca163c37b0d67b59306dfe0
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
+REDIS_ADDRESS=0.0.0.0:6379
+EMAIL_SENDER_NAME=Mono Finance
+EMAIL_SENDER_ADDRESS=mono.finance.click@gmail.com
+EMAIL_SENDER_PASSWORD=hyjvapmkmpxqmput
